--- a/style.css
+++ b/style.css
@@ -5,79 +5,87 @@
 }
 
 body {
+    background: #ff3;
+    overflow: hidden;
+}
+
+.container {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #ff3;
-}
-
-.container {
-    width: 600px;
+    width: 800px;
     border-radius: 16px;
     background-color: #fff;
-    padding: 30px;
+    padding: 50px;
 }
 
-.container h2 {
-    font-size: 30px;
-    font-weight: 500;
-    padding: 18px 25px;
-    border: 1px solid #ccc;
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 120px;
+    gap: 50px;
 }
 
-.container .content {
-    margin: 25px 20px 35px;
+.main img {
+    width: 200px;
+    height: 120px;
+    border-radius: 16px;
+    transition: .5s;
 }
 
-.content .word {
-    font-size: 33px;
-    font-weight: 500;
-    text-align: center;
-    letter-spacing: 24px;
-    margin-right: -25px;
-    border: 1px dashed #003;
-    padding: 15px;
+.main img:hover {
+    opacity: .8;
 }
 
-.details {
-    margin: 25px 0 20px;
-}
-
-.details p {
-    font-size: 24px;
-    margin-bottom: 12px;
-}
-
-.details p b {
-    font-weight: 700;
-}
-
-.content input {
-    width: 100%;
-    height: 60px;
-    outline: none;
-    padding: 0 16px;
-}
-
-.btns button{
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
     margin-top: 20px;
-    border: none;
-    outline: none;
-    color: #000;
-    cursor: pointer;
-    padding: 15px 0;
-    font-size: 18px;
-    border-radius: 5px;
-    width: calc(100% / 2 - 8px);
 }
 
-.refresh {
-    background: #ccc;
+h2, h3 {
+    font-family: 'Courier New', Courier, monospace;
 }
 
-.check {
-    background: #5372f0;
-    margin: 0px 6px 0px;
-}
-
+  
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    margin-top: 70px;
+    overflow: hidden;
+  }
+  
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .rules {
+    margin-bottom: 15px;
+  }
+  
+  .rules p {
+    margin-bottom: 10px;
+    line-height: 1.5;
+  }
+  
+  .footer-text {
+    margin-top: auto;
+  }
+  
+  h4 {
+    font-size: 1rem;
+    font-weight: normal;
+  }
+  
+  
