--- a/style.css
+++ b/style.css
@@ -28,16 +28,19 @@ body {
     gap: 50px;
 }
 
+/* Image styles */
 .main img {
-    width: 200px;
-    height: 120px;
-    border-radius: 16px;
-    transition: .5s;
+  width: 100px; /* Adjust the width as needed */
+  height: 90px;
+  border-radius: 8px; /* Adds a rounded border */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Adds a subtle shadow */
+  transition: transform 0.3s ease-in-out; /* Adds a smooth transition effect */
 }
 
 .main img:hover {
-    opacity: .8;
+  transform: scale(1.1); /* Increases the size of the image on hover */
 }
+
 
 .title {
     display: flex;
@@ -53,16 +56,16 @@ h2, h3 {
 
   
 footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-    bottom: 0;
-    width: 100%;
-    margin-top: 70px;
-    overflow: hidden;
-  }
-  
+  position: fixed;
+  background-color: rgb(230, 197, 87);
+  color: #000;
+  padding: 20px;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+}
+
   .content {
     display: flex;
     flex-direction: column;
